--- a/Index2.html
+++ b/Index2.html
@@ -10,14 +10,7 @@
     <div class="container">
         <div class="encabezado">
             
-            <h1> Este encabezado resuelve el conflicto </h1>
-
-<<<<<<< HEAD
-            <h1> Este es el encabezado en "Master"</h1>
-=======
-            <h1> Este es el encabezado en “Rama1" </h1>
->>>>>>> Rama1
-        </div>
+            <h1> Este es el encabezado final </h1>
 
         <h2>Por favor llena el formulario</h2>
         <form class="formulario" action="/pagina_destino.php">
